tests/rosetta/out/Fortran/character-codes-5.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:40Z
program character_codes_5
  implicit none
  print *, chr(97)
  print *, chr(960)
  print *, (chr(97) + chr(960))
  contains
  recursive character(len=100) function chr(n) result(res)
    integer, intent(in) :: n
    if ((n == 97)) then
      res = 'a'
      return
    end if
    if ((n == 960)) then
      res = 'π'
      return
    end if
    if ((n == 65)) then
      res = 'A'
      return
    end if
    res = '?'
    return
  end function chr
end program character_codes_5
